# LibreKick

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: build.sh  bundle_linux_vst3.sh  compile_linux.sh  dev_rebuild.sh  dev_restart.sh  install.sh  install_linux.sh  restart.sh  sample.env  source_env.sh  start.sh  start_linux.sh
scripts/core/: bundle.sh  compile.sh  install.sh  start.sh
src/: lib.rs  main.rs
src/assets/seed_patches/: seed_psytrance_kick.librekick_patch
src/audio/: mod.rs  oscillator.rs  voice.rs
src/common/: logger.rs
src/config/: librekick.sample.env  mod.rs
src/midi/: mod.rs
src/patches/: mod.rs
src/shared/: logger.rs  mod.rs
src/ui/: helpers.rs  mod.rs  state.rs  theme.rs
src/ui/components/: envelope_editor.rs  mod.rs  oscillator_panel.rs  oscilloscope.rs  panel.rs  waveform_preview.rs
src/ui/pages/: bass.rs  kick.rs  logs.rs  mod.rs  oscilloscope.rs  settings.rs
